# ask-claude

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  PACKAGE-PLAN.md  README.md  RECOMMENDED_API.md  RELEASING.md  WORKING_VERSION_NOTES.md  approval_strategies.py  claude_code_tests.py  claude_code_wrapper.py  cli_tool.py  comprehensive_readme.md  config_examples.json  configurable_approval_server.py  debug_claude_responses.py  docker_setup.txt  dynamic_approval_server.py  getting_started.py  github_actions.txt  improved_basic_example.py  main.py  manual_workaround.py  mcp-servers.json  production_example.py  pyproject.toml  pytest.ini  quick_fix_example.py  requirements.txt  requirements_files.txt  session_enhancements.py  session_manager.py  test_runner.py  tox.ini  usage_examples.md
.claude_dev_sessions/: None.json  session_index.json
.claude_dev_sessions/checkpoints/: None-checkpoint-initial-review.json
.github/workflows/: coverage-badge.yml  release.yml  test-release.yml  tests.yml
ask_claude/: __init__.py  cli.py  session.py  wrapper.py
ask_claude/approval/: __init__.py  server.py  strategies.py
docs/: README.md  api-core.md  api-exceptions.md  api-reference.md  cache-comparison.md  caching-guide.md  cli-usage.md  configuration.md  development.md  error-handling.md  future.md  installation.md  mcp-auto-approval.md  mcp-integration.md  model-selection.md  production.md  quickstart.md  session-management.md  usage-examples.md
examples/: cache_configuration_example.py  getting_started.py  mcp_auto_approval_example.py  mcp_comprehensive_example.py  mcp_example.py  mcp_production_guide.py  production_example.py  session_management_demo.py  session_manager_demo.py
tests/: __init__.py  test_approval_server.py  test_approval_strategies.py  test_claude_code_wrapper.py  test_cli_tool.py  test_session_management.py  test_wrapper_error_handling.py
